src/pages/Auth/styles/auth.scss
// .logo__container {
//     width: 45%;
// }

.logo__container {
    background: linear-gradient(0deg, rgba(8, 131, 149, 0.80) 0%, rgba(8, 131, 149, 0.80) 100%), url("https://www.figma.com/file/pKjMht1X2geCKktU24hFDd/image/2d83ec7d9d394c6e3adc95e4705c418d5ac9cc0f"), lightgray 50% / cover no-repeat;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: center;
    align-items: center;
    width: 45%;

    h6 {
        color: var(--secondary-secondary-04-main, #FBA04B);
        font-size: 23px;
        font-style: normal;
        font-weight: 700;
        line-height: 150%;
        margin-top: 0;
    }
}

@media screen and (max-width: 481px) {
    .logo__container {
        display: none;
    }
}

// .logo {

// }

.auth__container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-block: 2rem;
    padding-inline: 4rem;
    width: 55%;
    h1 {
        color: #141414;
        font-size: 28px;
        font-style: normal;
        font-weight: 700;
        line-height: 150%;
        span {
            color: #37BBCA;
        }
    }
    div {
        display: flex;
        justify-content: space-between;
        hr {
            color: #CECECE;
            height: 0.1px;
            margin-top: 1.6rem;
            margin-inline: 0.7rem;
            opacity: 50%;
            width: 153px;
        }
        h3 {
            font-size: 1rem;
            font-style: normal;
            font-weight: 400;
            span {
                color: #37BBCA;
                cursor: pointer;
                &:hover {
                    text-decoration: underline;
                }
            }
        }
    }
    .auth__container--form {
        display: flex;
        justify-content: center;
        width: 100%;
        input, select {
            border-radius: 4px;
            border: 1.25px solid var(--grey-grey-03, #CECECE);
            display: flex;
            font-size: 1rem;
            align-items: flex-start;
            gap: 8px;
            height: 2.575rem;
            padding-inline: 1rem;
            position: relative;
            margin-block: 0.5rem;
            // padding: 11px 12px;
            width: 530px;
            &:focus {
                // border-color: #CECECE;
                outline: none;
            }
        }
        select {
            background: none;
            color: #848484ec;
            display: flex;
            justify-content: center;
            font-size: 0.9rem;
            width: 100%;
            option {
                font-family: 'Roboto', sans-serif;
                font-size: 0.9rem;
            }
        }
        div {
            display: flex;
            position: relative;
        }
        .auth__container--password {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            position: relative;
        }
        // .auth__container--show--password {

        // }
        svg {
            cursor: pointer;
            height: 1rem;
            margin-top: 1.8rem;
            position: absolute;
            right: 10px;
            top: -5px;
            width: 1.5rem;
        }
        .loading {
            position: absolute;
            bottom: 259.5px;
            right: 130px;
        }
        
        p {
            color: var(--primary-primary-06, #2C96A2);
            cursor: pointer;
            font-size: 13px;
            font-style: normal;
            font-weight: 400;
            line-height: 150%;
            margin-top: 0;
            margin-bottom: 1.5rem;
            &:hover {
                text-decoration: underline;
            }
        }

        .error {
            color: var(--accent-red, #DA4747);
            font-size: 13px;
            font-style: normal;
            font-weight: 400;
            line-height: 150%;
        }

        h6 {
            color: var(--grey-grey-04, #848484);
            font-size: 13px;
            font-style: normal;
            font-weight: 300;
            line-height: 150%;
            margin: 0 auto 1.5rem; 
            justify-self: flex-start;
        }
    }

    .auth__container--btn, .reset__password--btn {
        border: 1px;
        border-radius: 4px;
        cursor: pointer;
        background: var(--primary-primary-05-main, #37BBCA);
        color: #FFF;
        font-size: 1rem;
        height: 2.875rem;
        padding: .6875rem 1rem;
        transition: background-color 0.5s ease-in 0.1ms;
        width: 100%;
        &:hover {
            background-color: lighten(#37BBCA, 10%);
            ;
        }
    }

    .reset__password--btn:disabled {
        background: #CECECE;
        color: #000;
        cursor: text;
        opacity: 50%;
        pointer-events: none;
        text-decoration: none;
    }

    h5 {
        color: var(--colour-styles-black-01, #111);
        font-size: 13px;
        font-style: normal;
        font-weight: 400;
        line-height: 150%;
        span {
            color: var(--primary-primary-05-main, #37BBCA);
            cursor: pointer;
            &:hover {
                text-decoration: underline;
            }
        }
    }
}

::placeholder {
    font-family: 'Roboto', sans-serif;
    font-size: 0.9rem;
}


@media screen and (max-width: 481px) {
    .auth__container {
        align-items: flex-start;
        padding-top: 4rem;
        padding-inline: 3rem;
        text-align: center;
        width: 100%;
        h3 {
            text-align: left;
        }
        h1 {
            font-size: 1.6rem;
            text-align: left;
        }
        div {
            hr {
                display: none;
            }
            h3 {
                font-size: 0.8rem;
            }
        }
        .auth__container--form {
            input {
                width: 250px;
            }
            p {
                display: flex;
                justify-content: flex-start;
            }
        }
        h5 {
            font-size: 11.5px;
        }
    }

    ::placeholder {
        font-family: 'Roboto', sans-serif;
        font-size: 0.7rem;
    }
}

